[package]
name = "lxtui"
version = "0.1.1"
edition = "2021"
authors = ["LXTUI Contributors"]
description = "A modern terminal user interface for managing LXC/LXD containers with intuitive keyboard shortcuts and real-time operation tracking"
repository = "https://github.com/FoleyBridge-Solutions/lxtui"
homepage = "https://github.com/FoleyBridge-Solutions/lxtui"
documentation = "https://docs.rs/lxtui"
readme = "README.md"
license = "MIT"
keywords = ["lxc", "lxd", "tui", "containers", "terminal"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "/.github",
    "/docs/screenshots",
    "*.log",
    "/tests/fixtures",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
tokio-util = "0.7"
futures = "0.3"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
hyperlocal = "0.8"
hyper = "0.14"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2.5"
